# solana-narrative-tracker

./: .env.example  .gitignore  Cargo.toml  README.md  analyzer.py  main.py  requirements.txt
.github/workflows/: update.yml
collectors/: __init__.py  github_signals.py  market.py  onchain.py  social.py
data/: analysis.json
site/: app.js  data.json  index.html  privacy.html  style.css  terms.html
src/: main.rs
